Enhance Vimeo integration and Azure Monitor configuration
- Added support for uploading videos from Vimeo URLs, including validation and accessibility checks.
- Implemented a new API endpoint for processing Vimeo videos.
- Updated the document upload workflow to handle both Vimeo uploads and direct file uploads.
- Enhanced error handling and user feedback for Vimeo processing.
- Configured Azure Monitor to be optional based on the presence of a connection string, with appropriate logging for local development.
- Updated environment configuration to include Vimeo settings and improved security headers in config.py.
- Added UI elements for selecting video upload methods and inputting Vimeo URLs in the workspace template.

--- a/application/single_app/example.env
+++ b/application/single_app/example.env
@@ -1,18 +1,77 @@
+# Example Environment Configuration File
+# Copy this file to .env and fill in your actual values
+# DO NOT commit .env to version control!
+
+# ============= REQUIRED FOR LOCAL DEVELOPMENT =============
+
+# Flask Configuration
+SECRET_KEY="Generate-A-Strong-Random-Secret-Key-Here-32-Chars-Minimum"
+FLASK_DEBUG="1"
+
 # Azure Cosmos DB
 # Use connection string OR endpoint/key OR managed identity
-# e.g., https://mycosmosdb.documents.azure.com:443/
 AZURE_COSMOS_ENDPOINT="<your-cosmosdb-account-uri>"
 # Options: "key", "connection_string", "managed_identity"
 AZURE_COSMOS_AUTHENTICATION_TYPE="key"
-# if using key, then populate the following:
+# If using key, populate the following:
 AZURE_COSMOS_KEY="<your-cosmosdb-primary-key>"
-
 
 # Azure AD Authentication (Required)
 CLIENT_ID="<your-app-registration-client-id>"
 TENANT_ID="<your-azure-ad-tenant-id>"
-# SECRET_KEY should be a long, random, secret string (e.g., 32+ chars) used for Flask session signing. Generate one securely.
-SECRET_KEY="Generate-A-Strong-Random-Secret-Key-Here!"
-# AZURE_ENVIRONMENT: Set based on your cloud environment
+
+# Azure Environment
 # Options: "public", "usgovernment", "custom"
 AZURE_ENVIRONMENT="public"
+
+# ============= OPTIONAL (for specific features) =============
+
+# Application Insights (Optional - for monitoring)
+# APPLICATIONINSIGHTS_CONNECTION_STRING="InstrumentationKey=xxx;IngestionEndpoint=https://..."
+
+# Vimeo Integration (Optional - for automatic video upload)
+# Get your access token from https://developer.vimeo.com/apps
+# Required scopes: upload, private, video_files, edit
+VIMEO_ACCESS_TOKEN="<your-vimeo-personal-access-token>"
+VIMEO_ENABLE_UPLOAD="true"
+# Preferred quality for video download and playback (360p, 540p, 720p, 1080p)
+VIMEO_PREFERRED_QUALITY="360p"
+
+# Azure OpenAI (Optional - for chat features)
+# AZURE_OPENAI_ENDPOINT="<your-openai-endpoint>"
+# AZURE_OPENAI_KEY="<your-openai-key>"
+# AZURE_OPENAI_DEPLOYMENT="<your-deployment-name>"
+# AZURE_OPENAI_EMBEDDING_DEPLOYMENT="<your-embedding-deployment>"
+
+# Azure AI Search (Optional - for document search)
+# AZURE_SEARCH_ENDPOINT="<your-search-endpoint>"
+# AZURE_SEARCH_KEY="<your-search-key>"
+
+# Azure Blob Storage (Optional - for document storage)
+# AZURE_STORAGE_ACCOUNT_NAME="<your-storage-account>"
+# AZURE_STORAGE_ACCOUNT_KEY="<your-storage-key>"
+
+# Azure Video Indexer (Optional - for video processing)
+# VIDEO_INDEXER_ENDPOINT="https://api.videoindexer.ai"
+# VIDEO_INDEXER_LOCATION="trial"
+# VIDEO_INDEXER_ACCOUNT_ID="<your-account-id>"
+# VIDEO_INDEXER_RESOURCE_GROUP="<your-resource-group>"
+# VIDEO_INDEXER_SUBSCRIPTION_ID="<your-subscription-id>"
+# VIDEO_INDEXER_ACCOUNT_NAME="<your-account-name>"
+
+# Redis Cache (Optional - for session management)
+# ENABLE_REDIS_CACHE="false"
+# REDIS_URL="<your-redis-hostname>.redis.cache.windows.net"
+# REDIS_KEY="<your-redis-key>"
+# REDIS_AUTH_TYPE="key"
+
+# Feature Flags (Optional - enable/disable features)
+# ENABLE_USER_WORKSPACE="true"
+# ENABLE_GROUP_WORKSPACES="true"
+# ENABLE_PUBLIC_WORKSPACES="true"
+# ENABLE_ENHANCED_CITATIONS="true"
+# ENABLE_VIDEO_FILE_SUPPORT="true"
+# ENABLE_AUDIO_FILE_SUPPORT="true"
+# ENABLE_EXTRACT_META_DATA="true"
+# ENABLE_SEMANTIC_KERNEL="false"
+
